# llm_api_server_mock

./: Dockerfile  LICENSE  README.md  example_env  pyproject.toml  pyproject_old.toml  sandbox.ipynb
.github/workflows/: publish_image.yaml
llm_api_server_mock/: main.py  models.py
llm_api_server_mock/chat/: models.py  surrogates.py
openai_api_server_mock/: settings.py  utils.py
openai_api_server_mock/chat/: routes.py  surrogates.py
src/openai_api_mock/chat/: routes.py  surrogates.py
