[tool.poetry]
name = "openai-api-server-mock"
version = "0.1.0"
description = "A mock for a LLM hosting server exposing the OpenAI Api."
authors = ["Sander Niels Hummerich <64867257+hummerichsander@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
lorem-text = "^2.1"
pydantic-settings = "^2.5.2"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
openai = "^1.47.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
